@@ -10,6 +10,7 @@
 # Contributor(s):
 #   Rob Miller (rmiller@mozilla.com)
 #   Mike Trinkala (trink@mozilla.com)
+#   Carlos Diaz-Padron (cpadron@mozilla.com,carlos@carlosdp.io)
 #
 # ***** END LICENSE BLOCK *****/
 
@@ -37,6 +38,7 @@ type TcpOutput struct {
 	name                string
 	reportLock          sync.Mutex
 	bufferedOut         *BufferedOutput
+	or                  OutputRunner
 }
 
 // ConfigStruct for TcpOutput plugin.
@@ -102,8 +104,13 @@ func (t *TcpOutput) connect() (err error) {
 		t.connection, err = dialer.Dial("tcp", t.address)
 	}
 	if t.conf.KeepAlive {
-		t.connection.(*net.TCPConn).SetKeepAlive(t.conf.KeepAlive)
-		t.connection.(*net.TCPConn).SetKeepAlivePeriod(time.Duration(t.conf.KeepAlivePeriod) * time.Second)
+		tcpConn, ok := t.connection.(*net.TCPConn)
+		if !ok {
+			t.or.LogError(fmt.Errorf("KeepAlive only supported for TCP Connections."))
+		} else {
+			tcpConn.SetKeepAlive(t.conf.KeepAlive)
+			tcpConn.SetKeepAlivePeriod(time.Duration(t.conf.KeepAlivePeriod) * time.Second)
+		}
 	}
 	return
 }
@@ -147,6 +154,8 @@ func (t *TcpOutput) Run(or OutputRunner, h PluginHelper) (err error) {
 		outputError = make(chan error, 5)
 		stopChan    = make(chan bool, 1)
 	)
+
+	t.or = or
 
 	defer func() {
 		if t.connection != nil {
