@@ -92,6 +92,8 @@ Features
 
 * Add detection and handling of gzipped files to LogstreamerInput (issue #648).
 
+* Added optional TCP Keep-Alive parameters to TcpInput/TcpOutput plugins.
+
 0.5.3 (2014-MM-DD)
 ==================
 
